# reinforcement-learning

./: .gitignore  README.md  RL_NOTES.md
flappybird/: README.md  agents.py  configs.py  eval.py  eval_config.yaml  flappybird.py  pyproject.toml  start_mlflow.sh  sweep_config.yaml  train.py  train_config.yaml  train_eval.py  train_ppo.py  utils.py
flappybird/tests/: test_env.py  test_flappybird.py  test_utils.py
unit-4/: README.md  install_deps.sh  pixelcopter.py  pyproject.toml  utils.py
unit-5/: pandareach.py  pyproject.toml
unit-8-vizdoom/: _vizdoom.ini  install_deps.sh  main.py  pyproject.toml
