[project]
name = "flappybird"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flappy-bird-gymnasium>=0.4.0",
    "gymnasium[mujoco]>=0.29.1",
    "huggingface-sb3>=3.0",
    "hydra-core>=1.3.2",
    "mlflow>=3.6.0",
    "moviepy>=2.2.1",
    "opencv-python>=4.8.1.78",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.0",
    "torch>=2.9.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
tests = ["pytest>=9.0.0"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
