[project]
name = "unit-5"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.1",
    "huggingface-hub>=0.35.3",
    # HACK: push_to_hub() replay video generation fix by Benjy-D (PR not merged yet)
    # "huggingface-sb3 @ https://github.com/Benjy-D/huggingface_sb3.git",
    "huggingface-sb3>=3.0", # needs Benfy-D's fix in push_to_hub
    "moviepy>=2.2.1",
    "numpy>=2.0.0",
    "panda-gym>=3.0.7",
    "stable-baselines3[extra]>=2.7.0",
    "typer>=0.19.2",
]
